[workspace]
members = [
    "crates/graph-core",
    "crates/graph-traversal",
    "crates/graph-centrality",
    "crates/graph-community",
    "crates/graph-viz",
    "crates/graph-cli",
    "crates/aprender-demo",
    "crates/aprender-contracts-demo",
    "crates/svg-layout-checker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/rust-graph-algorithms"
homepage = "https://github.com/paiml/rust-graph-algorithms"
authors = ["Noah Gift <noah@paiml.com>"]
rust-version = "1.95"

[workspace.dependencies]
graph-core = { path = "crates/graph-core", version = "0.1.0" }
graph-traversal = { path = "crates/graph-traversal", version = "0.1.0" }
graph-centrality = { path = "crates/graph-centrality", version = "0.1.0" }
graph-community = { path = "crates/graph-community", version = "0.1.0" }
graph-viz = { path = "crates/graph-viz", version = "0.1.0" }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
