[package]
name = "aprender-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Working demo of paiml/aprender-graph (re-exported as trueno_graph) — companion lesson 1.1.4"

[dependencies]
aprender-graph = { version = "0.31.2", default-features = false }
anyhow = { workspace = true }

[dev-dependencies]
