[package]
name = "aprender-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Working demo of paiml/aprender-graph 0.31.2 — companion lesson 1.1.4"

[dependencies]
# Cargo's `package = ...` dep-rename lets us refer to the crate as
# `aprender_graph` in source code, hiding the legacy `trueno_graph` lib
# name from consumers. One namespace, no rename surprise.
aprender_graph = { package = "aprender-graph", version = "0.31.2", default-features = false }
anyhow = { workspace = true }

[dev-dependencies]
