[package]
name = "graph-centrality"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Degree and PageRank centrality"

[dependencies]
graph-core = { workspace = true }
