[package]
name = "graph-community"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Connected components and Kosaraju SCC"

[dependencies]
graph-core = { workspace = true }

[dev-dependencies]
petgraph = "0.8"

[[example]]
name = "twitter_communities"
path = "examples/twitter_communities.rs"
