[package]
name = "graph-traversal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "BFS, DFS, Dijkstra"

[dependencies]
graph-core = { workspace = true }
