[package]
name = "graph-traversal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "BFS, DFS, Dijkstra"

[dependencies]
graph-core = { workspace = true }

[dev-dependencies]
petgraph = "0.8"

[[example]]
name = "lisbon_shortest_path"
path = "examples/lisbon_shortest_path.rs"
