[package]
name = "graph-viz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "DOT export for Graphviz rendering"

[dependencies]
graph-core = { workspace = true }
