[package]
name = "svg-layout-checker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Falsifier for the c12 SVG layout contract — six structural floors checked against any SVG master"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
